<resources>
    <string name="app_name">友和融</string>
    <string name="company_name">广州友禾信息科技有限公司</string>
    <string name="copyright"> Copyright© 2016-2017 FlyingDog All Rights Reserved</string>


    <string name="NumberKey0">0</string>
    <string name="NumberKey00">00</string>
    <string name="NumberKey1">1</string>
    <string name="NumberKey2">2</string>
    <string name="NumberKey3">3</string>
    <string name="NumberKey4">4</string>
    <string name="NumberKey5">5</string>
    <string name="NumberKey6">6</string>
    <string name="NumberKey7">7</string>
    <string name="NumberKey8">8</string>
    <string name="NumberKey9">9</string>
    <string name="NumberKeyDot">.</string>

    <string name="tvTotalAmtTemplate">00</string>
    <string name="SPACE">　</string>
    <string name="OK">确定</string>


    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>

</resources>
