<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/white"
                >

                <ImageButton
                    android:id="@+id/back_ibtn"
                    android:layout_width="@dimen/topbar_size"
                    android:layout_height="@dimen/topbar_size"
                    android:src="@mipmap/icon_left"
                    android:background="@drawable/laybeijin"
                    android:scaleType="center"
                    android:layout_centerVertical="true"
                    />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="收款金额"
                    android:textSize="@dimen/text_size20"
                    android:padding="20dp"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:padding="15dp">

                <TextView
                    android:id="@+id/count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="请输入收款金额"
                    android:textColor="@color/gray" />


                <TextView
                    android:id="@+id/tvMoneyLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/count_tv"
                    android:background="@color/lucency"
                    android:gravity="right"
                    android:paddingTop="25dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="55sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:text="￥"
                    android:layout_toLeftOf="@+id/tvInputView"
                    />


                <TextView
                    android:id="@+id/tvInputView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/count_tv"
                    android:layout_alignParentRight="true"
                    android:background="@color/lucency"
                    android:gravity="right"
                    android:hint="0.00"
                    android:paddingTop="25dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="55sp"
                    android:textStyle="bold"
                    android:typeface="serif" />


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:orientation="horizontal"
                android:weightSum="4">


                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/laybeijin"
                    android:focusable="false"
                    android:padding="25dp"
                    android:text="@string/NumberKey1"
                    android:textColor="@color/black_color"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/laybeijin"
                    android:focusable="false"
                    android:padding="25dp"
                    android:text="@string/NumberKey2"
                    android:textColor="@color/black_color"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/laybeijin"
                    android:focusable="false"
                    android:padding="25dp"
                    android:text="@string/NumberKey3"
                    android:textColor="@color/black_color"
                    android:textSize="25sp" />


                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/laybeijin"
                    android:focusable="false"
                    android:padding="25dp"
                    android:text="B"
                    android:textColor="@color/black_color"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:weightSum="4">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/laybeijin"
                    android:focusable="false"
                    android:padding="25dp"
                    android:text="@string/NumberKey4"
                    android:textColor="@color/black_color"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/laybeijin"
                    android:focusable="false"
                    android:padding="25dp"
                    android:text="@string/NumberKey5"
                    android:textColor="@color/black_color"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/laybeijin"
                    android:focusable="false"
                    android:padding="25dp"
                    android:text="@string/NumberKey6"
                    android:textColor="@color/black_color"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/laybeijin"
                    android:focusable="false"
                    android:padding="25dp"
                    android:text="C"
                    android:textColor="@color/black_color"
                    android:textSize="25sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="0.5dp"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/button7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0.5dp"
                            android:layout_weight="1"
                            android:background="@drawable/laybeijin"
                            android:focusable="false"
                            android:padding="25dp"
                            android:text="@string/NumberKey7"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/button8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0.5dp"
                            android:layout_weight="1"
                            android:background="@drawable/laybeijin"
                            android:focusable="false"
                            android:padding="25dp"
                            android:text="@string/NumberKey8"
                            android:textColor="@color/black_color"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/button9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0.5dp"
                            android:layout_weight="1"
                            android:background="@drawable/laybeijin"
                            android:focusable="false"
                            android:padding="25dp"
                            android:text="@string/NumberKey9"
                            android:textColor="@color/black_color"
                            android:textSize="25sp" />
                    </TableRow>


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="0.5dp"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/button0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0.5dp"
                            android:layout_weight="1"
                            android:background="@drawable/laybeijin"
                            android:focusable="false"
                            android:padding="25dp"
                            android:text="@string/NumberKey0"
                            android:textColor="@color/black_color"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/button_dot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0.5dp"
                            android:layout_weight="1"
                            android:background="@drawable/laybeijin"
                            android:focusable="false"
                            android:padding="25dp"
                            android:text="@string/NumberKeyDot"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/button00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0.5dp"
                            android:layout_weight="1"
                            android:background="@drawable/laybeijin"
                            android:focusable="false"
                            android:padding="25dp"
                            android:text="@string/NumberKey00"
                            android:textSize="25sp" />

                    </TableRow>

                </TableLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnSure"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:text="确认"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
